# fresher

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  fresher  install.sh
.fresher/: AGENTS.md  PROMPT.building.md  PROMPT.planning.md  config.sh  run.sh
.fresher-internal/: init.sh
.fresher/hooks/: finished  next_iteration  started
.fresher/lib/: state.sh  termination.sh
.fresher/tests/integration/: test-planning-mode.sh
.fresher/tests/mocks/: claude
.github/workflows/: release.yml  test.yml
docs/: ralph-loop.md
specs/: README.md  docker-isolation.md  docker-ux.md  documentation.md  impl-structure.md  installer.md  lifecycle-hooks.md  loop-executor.md  plan-verification.md  project-integration.md  project-scaffold.md  prompt-templates.md  self-testing.md
src/: cli.rs  config.rs  docker.rs  hooks.rs  impl_plan.rs  lib.rs  main.rs  state.rs  streaming.rs  templates.rs  upgrade.rs  verify.rs
src/commands/: build.rs  docker.rs  init.rs  migrate.rs  mod.rs  plan.rs  upgrade.rs  verify.rs  version.rs
tests/: docker.rs  docker_e2e.rs  hooks.rs  init.rs  verify.rs
