[package]
name = "fresher"
version = "2.1.3"
edition = "2021"
description = "A portable Ralph Loop implementation for AI-driven iterative development"
license = "MIT"
repository = "https://github.com/shanewwarren/fresher"
readme = "README.md"
keywords = ["ai", "development", "automation", "claude"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process", "signal"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
semver = "1"
flate2 = "1"
tar = "0.4"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
thiserror = "1"
anyhow = "1"
colored = "2"
dirs = "5"
which = "6"
futures = "0.3"
tokio-stream = "0.1"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
